@@ -1,3 +1,4 @@
+- imfile: added $InputFileMaxLinesAtOnce directive
 - enhanced imfile to support input batching
 ---------------------------------------------------------------------------
 Version 5.8.1  [V5-stable] (rgerhards), 2011-05-19
